--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   image_picker: ^1.1.2
   geolocator: ^13.0.2
   provider: ^6.1.2
+  http : ^0.13.6
+  firebase_core: ^3.11.0
+  cloud_firestore: ^5.6.3
 
 dev_dependencies:
   flutter_test:
