--- a/frontend/android/app/build.gradle
+++ b/frontend/android/app/build.gradle
@@ -42,6 +42,12 @@ android {
     }
 }
 
+dependencies {
+
+    implementation platform("org.jetbrains.kotlin:kotlin-bom:1.8.0")
+
+}
+
 flutter {
     source = "../.."
 }
