--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -46,10 +46,10 @@ dependencies:
   mapbox_gl: ^0.16.0
   path_provider: ^2.1.1
   firebase_storage: 12.4.4
+  connectivity_plus: 6.1.3
   
  
  
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
