--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   path_provider: ^2.1.1
   firebase_storage: 12.4.4
   connectivity_plus: 6.1.3
+  web_socket_channel: ^2.4.0
   
  
  
