--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -2,7 +2,7 @@ name: practice
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -30,16 +30,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  carousel_slider: ^4.0.0
-  
-    # The following adds the Cupertino Icons font to your application.
+  carousel_slider: ^5.0.0
+
+  # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   image_picker: ^1.1.2
   geolocator: ^13.0.2
-  location: ^5.0.0
+  location: ^8.0.0
   provider: ^6.1.2
-  http : ^0.13.6
+  http: ^0.13.6
   firebase_core: ^3.11.0
   flutter_polyline_points: ^1.0.0
   cloud_firestore: ^5.6.3
@@ -47,14 +47,11 @@ dependencies:
   path_provider: ^2.1.1
   firebase_storage: 12.4.4
   connectivity_plus: 6.1.3
-  web_socket_channel: ^2.4.0
-  
- 
- 
+  web_socket_channel: ^3.0.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -70,7 +67,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
