--- a/frontend/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/frontend/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=C:\flutter
-FLUTTER_APPLICATION_PATH=F:\GITHUB\ROAMEO\frontend
+FLUTTER_ROOT=C:\Computer Science\Flutter\Flutter SDK\flutter
+FLUTTER_APPLICATION_PATH=C:\IIT\2nd year\SDGP\Project\ROAMEO Sulaiman\ROAMEO\frontend
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
