--- a/frontend/android/local.properties
+++ b/frontend/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\user\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\Computer Science\\Flutter\\Flutter SDK\\flutter
+sdk.dir=C:\\Android
+flutter.sdk=C:\\src\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
