--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -48,6 +48,10 @@ dependencies:
   firebase_storage: 12.4.4
   connectivity_plus: 6.1.3
   web_socket_channel: ^2.4.0
+  cupertino_icons: ^1.0.8
+  cloud_firestore: ^4.12.0
+  http: ^0.13.3
+  intl: ^0.18.1
   
  
  
@@ -80,6 +84,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/map_styles/dark_mode.json
+    - lib/assets/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
