--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   firebase_storage: 12.4.4
   connectivity_plus: 6.1.3
   web_socket_channel: ^2.4.0
+  cached_network_image: ^3.3.1
   
  
  
