--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -47,7 +47,8 @@ dependencies:
   firebase_storage: 12.4.4
   connectivity_plus: 6.1.3
   web_socket_channel: ^2.4.0
-  dio: ^5.8.0+1
+  flutter_secure_storage: ^7.0.0
+ 
   
  
  
