--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -84,7 +84,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/map_styles/dark_mode.json
-    - lib/assets/
+    - lib/assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
