--- a/detail_page/pubspec.yaml
+++ b/detail_page/pubspec.yaml
@@ -51,16 +51,19 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
+  # Enables material design icons
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  # Asset paths for icons
+  assets:
+    - assets/icons/homeicon.png
+    - assets/icons/homeonclick.png
+    - assets/icons/chaticon.png
+    - assets/icons/aiicon.png
+    - assets/icons/exploreicon.png
+    - assets/icons/exploreonclick.png
+    - assets/icons/feedicon.png
+    - assets/icons/feedonclick.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
