--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   connectivity_plus: 6.1.3
   web_socket_channel: ^2.4.0
   flutter_secure_storage: ^7.0.0
+  flutter_dotenv: ^5.2.1
  
   
  
@@ -82,6 +83,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/map_styles/dark_mode.json
+    - .env
 
   # To add assets to your application, add an assets section, like this:
   # assets:
