--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -2,7 +2,7 @@ name: practice
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -30,9 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  carousel_slider: ^4.0.0
-  
-  
+  carousel_slider:
+    ^4.0.0
+
     # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -40,7 +40,7 @@ dependencies:
   geolocator: ^13.0.2
   location: ^5.0.0
   provider: ^6.1.2
-  http : ^0.13.6
+  http: ^0.13.6
   firebase_core: ^3.11.0
   flutter_polyline_points: ^1.0.0
   cloud_firestore: ^5.6.3
@@ -50,14 +50,10 @@ dependencies:
   web_socket_channel: ^2.4.0
   flutter_secure_storage: ^7.0.0
   flutter_dotenv: ^5.2.1
- 
-  
- 
- 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -68,12 +64,13 @@ dev_dependencies:
   google_maps_flutter: ^2.10.0
   google_maps_webservice: ^0.0.19+1
 
+  google_places_flutter: ^2.0.7 #Places API
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
