--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: Python application
 
 on:
   push:
-    branches: [ "ci-cd-pipeline" ]
+    branches: [ "main" ]
 
 permissions:
   contents: read
