--- a/frontend/android/local.properties
+++ b/frontend/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\CNN COMPUTERS\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\flutter
+sdk.dir=D:\\Softwares\\Flutter\\Android
+flutter.sdk=D:\\Softwares\\Flutter\\src\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
