--- a/frontend/android/local.properties
+++ b/frontend/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Android
-flutter.sdk=C:\\src\\flutter
+sdk.dir=D:\\Softwares\\Flutter\\Android
+flutter.sdk=D:\\Softwares\\Flutter\\src\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
